# nxos

./: .gitignore  README.md  pyproject.toml
nxos/: SConstruct
nxos/systems/tests/: tests.c
pynxt/: __init__.py  flash.py  lowlevel.py  samba.py
pynxt/cli/: __init__.py  fwexec.py  fwflash.py
usb_console/: ascii_dump.py  i2c_pin_data.py  rcmd_frontend.py  read_usb_dump.py  usb_console.py
