[tool.poetry]
name = "pynxt"
version = "0.1.0"
description = ""
authors = [
    "Sarah Amsellem <sarah.amsellem@gmail.com>",
    "David Anderson <dave@natulte.net>",
    "Romain Boissat <rboissat@gmail.com>",
    "Jérôme Flesch <jflesch@gmail.com>",
    "Maxime Petazzoni <sam@bulix.org>",
    "Edward Nys <edward.nys@gmail.com>",
    "Giovanni Simoni <simgidacav@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.6"
2to3 = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
